# racing_score

./: .gitignore  README.md  pyproject.toml
log_data/: abbreviations.txt
racing_reports_2018/: __init__.py  main.py  parser_main.py
tests_racing_reports_2018/: test_main.py  test_parser.py
