[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "racing_reports_2018"
version = "1.0.4"
authors = [
  { name="Stanislav Yena", email="ysa3dpost@gmail.com" },
]
description = "Package for counting the number of unique characters in string"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
license = "BSL-1.0"
license-files = ["LICEN[CS]E*"]

[project.urls]
Homepage = "https://git.foxminded.ua/foxstudent108024/task5_create_the_python_package"

[tool.hatch.build.targets.wheel]
packages = ["racing_reports_2018"]

